--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "display_name": "TastyPlug",
   "tastyplug_base_url": "https://tastyplug.tastycat.org",
   "version_title": "now rising from the dead.",
-  "version": "3.4.1",
+  "version": "3.5.0",
   "description": "a plug.dj extension",
   "scripts": {
-    "test": "node_modules/brunch/bin/brunch",
     "sign": "./node_modules/web-ext/bin/web-ext sign --api-key user:12335406:167 --api-secret ${TASTYPLUG_AMO_SECRET} --source-dir build/extension --artifacts-dir build/dist",
     "build": "./node_modules/gulp/bin/gulp.js",
-    "deploy": "rsync -rzP public/ tcat:/usr/local/www/tastyplug"
+    "deploy": "rsync -rzP public/ tastyplug:/usr/local/www/tastyplug",
+    "release": "source secrets.sh && npm run build && npm run deploy && npm run sign"
   },
   "repository": {
     "type": "git",
