--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-beautify": "^2.0.0",
+    "gulp-clean-css": "^2.0.9",
     "gulp-concat": "^2.6.0",
     "gulp-data": "^1.2.1",
     "gulp-debug": "^2.1.2",
