clarify that jquery is the custom download not the full jquery
please mozilla i dont want to replace all of the jquery-ui we use
:fire::pouting_cat:

--- a/extensions/manifest.json
+++ b/extensions/manifest.json
@@ -35,6 +35,6 @@
   "web_accessible_resources": [
     "tastyplug.core.js",
     "bootstrap.js",
-    "jquery-ui.js"
+    "jquery-ui.custom.js"
   ]
 }
