--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "tastyplug",
   "display_name": "TastyPlug",
   "tastyplug_base_url": "https://tastyplug.tastycat.org",
-  "version_title": "now rising from the dead.",
-  "version": "3.8.0",
+  "version_title": "has become a little less dead.",
+  "version": "4.0.0",
   "description": "a plug.dj extension",
   "scripts": {
     "sign": "./node_modules/web-ext/bin/web-ext sign --api-key user:12335406:167 --api-secret ${TASTYPLUG_AMO_SECRET} --source-dir build/extension --artifacts-dir build/dist",
@@ -22,9 +22,12 @@
   },
   "homepage": "https://github.com/catsaretasty/tastyplug#readme",
   "devDependencies": {
+    "almond": "^0.3.3",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "bluebird": "^3.3.4",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-beautify": "^2.0.0",
     "gulp-clean-css": "^2.0.9",
     "gulp-concat": "^2.6.0",
@@ -35,7 +38,9 @@
     "gulp-template": "^3.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-zip": "^3.2.0",
+    "install": "^0.8.1",
     "jpm": "^1.0.7",
+    "requirejs": "^2.3.2",
     "run-sequence": "^1.1.5",
     "uglify-js": "^2.6.2",
     "web-ext": "^1.0.1"
