--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-sass": "^2.3.2",
     "gulp-template": "^3.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-zip": "^3.2.0",
