--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tastyplug",
   "display_name": "TastyPlug",
-  "tastyplug_base_url": "https://tastyplug.tastycat.org",
+  "tastyplug_base_url": "https://tastyplug.tastycat.org/",
   "version_title": "has become a little less dead.",
   "version": "4.0.0",
   "description": "a plug.dj extension",
@@ -24,6 +24,7 @@
   "dependencies": {
     "almond": "^0.3.3",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-preset-es2015": "^6.16.0",
     "bluebird": "^3.3.4",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
